After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662033 - Strings not marked for translation in src/gpk-common.c
Strings not marked for translation in src/gpk-common.c
Status: RESOLVED FIXED
Product: gnome-packagekit
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gnome-packagekit-maint
gnome-packagekit-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-17 19:55 UTC by Piotr Drąg
Modified: 2011-10-18 16:00 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Piotr Drąg 2011-10-17 19:55:37 UTC
There are two strings in src/gpk-common.c not marked for translation, resulting in English text in localized desktop. These two are "32-bit" and "64-bit" (lines 295 and 301.)
Comment 1 Richard Hughes 2011-10-18 09:34:35 UTC
commit 7fb1f9799915363f7bb1e65d0e73c57c50582cbc
Author: Richard Hughes <richard@hughsie.com>
Date:   Tue Oct 18 10:34:04 2011 +0100

    Mark the '32-bit' and '64-bit' strings as translatable
    
    Resolves https://bugzilla.gnome.org/show_bug.cgi?id=662033
Comment 2 Piotr Drąg 2011-10-18 14:24:12 UTC
Maybe you could cherry-pick this to gnome-3-2 branch? It wouldn't be a string freeze break, as the string already exists.
Comment 3 Richard Hughes 2011-10-18 15:28:58 UTC
(In reply to comment #2)
> Maybe you could cherry-pick this to gnome-3-2 branch? It wouldn't be a string
> freeze break, as the string already exists.

Where does the string already exist? I could only see it in gpk-common.c ...
Comment 4 Piotr Drąg 2011-10-18 15:33:05 UTC
It exists in gpk-common.c file in branches master and gnome-3-2, but only in master it's now marked for translation. Because of that I can see English string in otherwise translated UI in versions 3.2.0 and 3.2.1.
Comment 5 Richard Hughes 2011-10-18 15:45:32 UTC
(In reply to comment #4)
> It exists in gpk-common.c file in branches master and gnome-3-2, but only in
> master it's now marked for translation. Because of that I can see English
> string in otherwise translated UI in versions 3.2.0 and 3.2.1.

Sure, agreed. I can't cherry pick the patch as that would be adding a new string to 3-2...
Comment 6 Piotr Drąg 2011-10-18 15:53:01 UTC
You are not adding a new string, the string is already there. Please see the guidelines [1], section "What changes are not affected by the string freeze?", which says:

"Marking a message for translation that was previously not marked for translation by accident [is not a affected]."

[1] https://live.gnome.org/TranslationProject/HandlingStringFreezes
Comment 7 Richard Hughes 2011-10-18 16:00:20 UTC
(In reply to comment #6)
> "Marking a message for translation that was previously not marked for
> translation by accident [is not a affected]."

I stand corrected, apologies. Pushed to gnome-3-2 also. Thanks.