Mark the '32-bit' and '64-bit' strings as translatable

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=662033